fix fact single

--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -180,7 +180,7 @@
 }
 
 @media screen
-and (min-width: 768px) and (max-width: 1023px){
+and (min-width: 768px) and (max-width: 1024px){
 
 .interestingFactsWrapper {
     @include wr.main-page-block-wrapper();
@@ -269,9 +269,11 @@ and (min-width: 768px) and (max-width: 1023px){
 
 
 .singleSlideContainer{
+    margin-bottom: pxToRem(65px);
+    padding-top: pxToRem(50px);
+
     .interestingFactSlide{
         @include mut.sized(345px);
-
         @include mut.full-rounded(20px);
 
         .slideImage {
@@ -285,14 +287,13 @@ and (min-width: 768px) and (max-width: 1023px){
         .slideText{
             @include mut.sized($height: 40%);
             .heading{
-                font-size:20px;
+                font-size:14px;
                 @include mut.rem-padded(7px, 0px, 8px, 15px);
             }
 
             .mainText{
                 overflow: auto;
-                height: 150px;
-                font-size: 15px;
+                font-size: 12px;
                 line-height: pxToRem(21px);
                 margin-bottom: pxToEm(10px);
 
@@ -315,23 +316,30 @@ and (min-width: 768px) and (max-width: 1023px){
 }
 
 @media screen and (max-width: 480px){
-.interestingFactsContainer {
-    @include mut.sized(100%, 100%);
+    .singleSlideContainer{
+        margin-bottom: 3.0625rem;
+        padding-top: 2.125rem;
+    }
 
-    .single{
-        margin-bottom: pxToRem(100px) ;
-   }
-}
+    .interestingFactsContainer {
+        @include mut.sized(100%, 100%);
 
-.interestingFactsWrapper {
-    @include wr.main-page-block-wrapper();
-    .slick-dots{
-        bottom: 15%;
-     }
-}
+        .single{
+            margin-bottom: pxToRem(100px) ;
+        }
+    }
+
+    .interestingFactsWrapper {
+        @include wr.main-page-block-wrapper();
+        .slick-dots{
+            bottom: 15%;
+        }
+    }
+
     .interestingFactsSliderContainer {
         @include mut.sized(770px, 100%); 
     }
+
     .interestingFactSlide{
         .slideImage {
             @include mut.sized($height: 45%);
@@ -341,9 +349,8 @@ and (min-width: 768px) and (max-width: 1023px){
             }
         }
     }
-    .singleSlideContainer{
-        padding-top:15.5%;
 
+    .singleSlideContainer{
         .interestingFactSlide{
             @include mut.sized(32%);
             @include mut.full-rounded(20px);
@@ -356,33 +363,8 @@ and (min-width: 768px) and (max-width: 1023px){
                 }
             }
             .slideText{
-                @include mut.sized($height: 20%);
+                @include mut.sized($height: 110px);
                 @include mut.full-rounded(0px);
-
-                .heading{
-                    font-size: 20px;
-                    @include mut.rem-padded(7px, 0px, 8px, 15px);
-
-                }
-    
-                .mainText{
-                    overflow: auto;
-                    height: 165px;
-                    font-size: 15px;
-                    line-height: pxToRem(21px);
-                    margin-bottom: pxToEm(10px);
-                    &:after {
-                        content: "";
-                        position: absolute;
-                        z-index: 1;
-                        bottom: 0;
-                        left: 0;
-                        pointer-events: none;
-                        background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255, 1) 90%);
-                        width: 100%;
-                        height: 1.7em;
-                    }
-                }
             }
         }
     }
