--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -4,8 +4,9 @@
 
 $bgImg: '@assets/images/streetcode-card/background.png';
 
-.container{
+.container {
     margin-top: f.pxToRem(110px);
+    margin-bottom: f.pxToRem(48px);
 }
 .streetcodeContainer {
     width: 100%;
