--- a/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
@@ -10,7 +10,7 @@
 
     .newsMainPage {
         @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
-        @include mut.sized(840px, 578px);
+        @include mut.sized(840px, 567px);
         @include mut.full-rounded(30px);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         background-color: #FFFFFF;
@@ -19,7 +19,7 @@
 
     .newsSlideText {
         position: absolute;
-        top: 385px;
+        top: 374px;
         z-index: 2;
         @include mut.sized(840px, 193px);
         @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
@@ -29,7 +29,7 @@
     .newsPageImgContainer {
         position: relative;
         z-index: 1;
-
+        // @include mut.rem-padded($top: 5px, $right: 5px, $bottom: 5px, $left: 5px); if padding in not on image
         .newsPageImg {
             position: relative;
             width: 100%;
@@ -39,7 +39,7 @@
     }
 
     .newsContainer {
-      
+        box-sizing: border-box;
         width: 100%;
         height: 100%;
         @include mut.flexed(column, start, space-between, nowrap);
