--- a/src/app/common/components/modals/Tags/TagsSliderModal/TagsSliderModal.styles.scss
+++ b/src/app/common/components/modals/Tags/TagsSliderModal/TagsSliderModal.styles.scss
@@ -3,7 +3,11 @@
 @use "@assets/sass/_utils.functions.scss" as f;
 
 .tagModalContainer {
-  width: 60%;
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
   .sliderClass{
     height: f.pxToRem(80px);
@@ -14,7 +18,6 @@
   }
   
   .slick-track {
-    position: relative;
     padding: f.pxToRem(22px) 0;
   }
 
@@ -29,6 +32,7 @@
     @include mut.rem-padded(8px, 10px, 8px, 10px);
     
     height: f.pxToRem(38px);
+    width: fit-content;
     margin-left: f.pxToRem(8px);
     margin-right: f.pxToRem(8px);
 
