--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -44,3 +44,4 @@ $input-outline-color: #E6E4E4 !important;
 $light-border-color: #DCDCDC !important;
 $partners-mobile-background-color: #FCFCFC !important;
 $streetcode-background-color:#FCFCFC !important;
+$catalog-background-color: #F5F5F5 !important;
