--- a/src/features/AdditionalPages/ContactUsPage/MainBlock/ContactForm/ContactForm.styles.scss
+++ b/src/features/AdditionalPages/ContactUsPage/MainBlock/ContactForm/ContactForm.styles.scss
@@ -1,6 +1,7 @@
 @use "@sass/_utils.functions.scss" as f;
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
+@use "@assets/sass/variables/_variables.colors.scss" as c;
 
 .contactUsContainer{
     .formContainer{
@@ -24,7 +25,7 @@
             .formSubTitle{
                 @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
                 line-height: 23px;
-                color: #1D1F23;
+                color: c.$lighter-black-color;
                 text-align: left;               
             }
         }
@@ -90,11 +91,15 @@
         
                 padding: f.pxToRem(25px) f.pxToRem(56px);
                 height: 100%;
-                background-color: #E04031;
+                background-color: c.$accented-red-color;
                 box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.18);
                 @include mut.full-rounded(14px);
                 border: none; 
-                cursor: pointer;      
+                cursor: pointer;
+                
+                &:hover {
+                    background-color: c.$dark-red-color;
+                }
             }
     
             .required-input {
