--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
@@ -7,71 +7,80 @@
 $bgImg: '@assets/images/catalog/background.png';
 $loadImg: '@assets/images/catalog/loading.gif';
 
-.streetcodeCatalogWrapper {
-    padding: pxToRem(100px) 10%;
-    background: url($bgImg) no-repeat center center / cover;
+.catalogPage{
+    width: 100%;
+    background: url($bgImg) no-repeat center / 100%;
     background-color: c.$accented-low-opasity-grayish-gray-color;
-    width: 100%;
-
+    background-position: center top;
+    background-attachment: scroll;
     height: 100%;
-    height: 100%;
 
-    .streetcodeCatalogHeading {
-        @include mut.with-font('Closer Text', 500, 96px, normal);
-        padding-bottom: pxToRem(40px);
-        line-height: pxToRem(127px);
-        display: flex;
-        align-items: center;
-        color: c.$milky-white-color;
+    .streetcodeCatalogWrapper {
+        margin-top: 5.125rem;
+        padding: pxToRem(10px) 10% pxToRem(100px) 10%;
+        width: 100%;
+        .streetcodeCatalogHeading {
+            @include mut.with-font('Closer Text', 500, 96px, normal);
+            padding-bottom: pxToRem(40px);
+            line-height: pxToRem(127px);
+            display: flex;
+            align-items: center;
+            color: c.$milky-white-color;
+        }
+    
+        .steetcodeCatalogContainer {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(278px, 1fr));
+            grid-auto-rows: minmax(165px, 380px);
+            column-gap: pxToRem(28px);
+            row-gap: pxToRem(60px);
+            justify-content: center;
+            justify-items: center;
+        }
     }
-
-    .steetcodeCatalogContainer {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(278px, 1fr));
-        grid-auto-rows: minmax(165px, 380px);
-        column-gap: pxToRem(28px);
-        row-gap: pxToRem(60px);
-        justify-content: center;
-        justify-items: center;
-    }
-}
-
-.loadingWrapper {
-    background-color: c.$accented-grayish-gray-color;
-    width: 100%;
-    @include mut.flex-centered();        
-
-    #loadingGif {
-        @include mut.bg-image($loadImg, contain, no-repeat);
-        @include mut.sized(60px, 60px);
-        margin-bottom: pxToRem(84px);
+    
+    .loadingWrapper {
+        background-color: c.$accented-grayish-gray-color;
+        width: 100%;
+        @include mut.flex-centered();        
+    
+        #loadingGif {
+            @include mut.bg-image($loadImg, contain, no-repeat);
+            @include mut.sized(60px, 60px);
+            margin-bottom: pxToRem(84px);
+        }
     }
 }
 
 @media screen and (max-width: 1024px) {
-    .streetcodeCatalogWrapper {
-        padding: pxToRem(80px) pxToRem(13px) 0;
-
-        .streetcodeCatalogHeading {
-            padding-bottom: 0;
-            font-size: 54px;
-            line-height: pxToRem(71.28px);
-        }
-
-        .steetcodeCatalogContainer {
-            padding-top: pxToRem(20px);
-            row-gap: pxToRem(20px);
-            grid-auto-rows: minmax(165px, 236px);
-            grid-template-columns: repeat(auto-fit, minmax(165px, 1fr));
-            justify-content: center;
+    .catalogPage{
+        .streetcodeCatalogWrapper {
+            padding: pxToRem(80px) pxToRem(13px) 0;
+            margin-top: 0;
+    
+            .streetcodeCatalogHeading {
+                padding-bottom: 0;
+                font-size: 54px;
+                line-height: pxToRem(71.28px);
+            }
+    
+            .steetcodeCatalogContainer {
+                padding-top: pxToRem(20px);
+                row-gap: pxToRem(20px);
+                grid-auto-rows: minmax(165px, 236px);
+                grid-template-columns: repeat(auto-fit, minmax(165px, 1fr));
+                justify-content: center;
+            }
         }
     }
 }
 
 @media screen and (max-width: 768px) {
-    .streetcodeCatalogWrapper {
-        .steetcodeCatalogContainer {
-            column-gap: pxToRem(10px);
+    .catalogPage{
+        .streetcodeCatalogWrapper {
+            .steetcodeCatalogContainer {
+                column-gap: pxToRem(10px);
+            }
         }
     }
 }
