--- a/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtn/PartnersBtn.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/ModalButtons/PartnersBtn/PartnersBtn.styles.scss
@@ -17,5 +17,10 @@ button {
     border-color:c.$accented-red-color ;
     color: c.$pure-white-color;
     background-color: c.$accented-red-color;
+
+    &:hover{
+        background-color: c.$dark-red-color;
+        transition: 0.5s;
+    }
  }
 
