--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -192,6 +192,8 @@
     box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
     border-radius: f.pxToRem(15px) !important;
     border: none;
+    color: c.$pure-white-color;
+    @include mut.with-font(ft.$roboto-font, $font-size: 20px, $font-weight: 500);
 
     &:disabled{
       background-color: c.$lighter-gray-color;
@@ -204,7 +206,8 @@
     }
 
     &:hover {
-      filter: brightness(110%);
+      background-color: c.$dark-red-color;
+      transition: 0.5s;
       border: none;
     }
 
